--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,3 +27,12 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+
+div {
+  width: 50px;
+  height: 50px;
+}
+
+div :active {
+  color: red;
+}
